[package]
name = "randoid"
description = "Implementation of nanoid ids that doesn't requre allocation"
version = "0.1.0"
authors = ["Thayne McCombs"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tmccombs/randoid"
keywords = ["nanoid", "random", "uuid", "id", "url"]
categories = ["no-std", "web-programming"]

[dependencies]
rand = { version = "0.8.5", optional = true, default_features = false}
smartstring = { version = "1.0", optional = true }

[features]
default = ["std-rand"]
std-rand = ["std", "rand", "rand/std", "rand/std_rng"]
alloc = []
std = []
